versions/v2.10/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/workload-ingress.adoc
= Workload with Ingress Quick Start
:page-languages: [en, zh]
:revdate: 2024-12-13
:page-revdate: {revdate}
:community-path: getting-started/quick-start-guides/deploy-workloads/workload-ingress.adoc 
:product-path: installation-and-upgrade/quick-start/deploy-workloads/workload-ingress.adoc
:experimental:
ifeval::["{build-type}" != "community"]
:xref-workloads-and-pods: xref:cluster-admin/kubernetes-resources/workloads-and-pods/workloads-and-pods.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-workloads-and-pods: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/index.adoc
endif::[]

== Prerequisite

You have a running cluster with at least 1 node.

== 1. Deploying a Workload

You're ready to create your first Kubernetes https://kubernetes.io/docs/concepts/workloads/[workload]. A workload is an object that includes pods along with other files and info needed to deploy your application.

For this workload, you'll be deploying the application Rancher Hello-World.

. Click *☰ > Cluster Management*.
. Go to the cluster that you created and click *Explore*.
. Click *Workload*.
. Click *Create*.
. Click *Deployment*.
. Enter a *Name* for your workload.
. From the *Container Image* field, enter `rancher/hello-world`. This field is case-sensitive.
. Click *Add Port* and `Cluster IP` for the `Service Type` and enter `80` in the *Private Container Port* field. You may leave the `Name` blank or specify any name that you wish. Adding a port enables access to the application inside and outside of the cluster. For more information, see {xref-workloads-and-pods}#_services[Services].
. Click *Create*.

*Result:*

* Your workload is deployed. This process might take a few minutes to complete.
* When your workload completes deployment, it's assigned a state of *Active*. You can view this status from the project's *Workloads* page.

== 2. Expose The Application Via An Ingress

Now that the application is up and running, it needs to be exposed so that other services can connect.

. Click *☰ > Cluster Management*.
. Go to the cluster that you created and click *Explore*.
. Click menu:Service Discovery[Ingresses].
. Click *Create.*
. When choosing *Namespace*, ensure it is the same as the one used when you created your deployment. Otherwise, your deployment will not be available when you attempt to select *Target Service*, as in Step 8 below.
. Enter a *Name*, such as *hello*.
. Specify your *Path*, such as `/hello`.
. In the *Target Service* field, drop down the list and choose the name that you set for your service.
. In the *Port* field, drop down the list and select `80`.
. Click *Create* at the bottom right.

*Result:* The application is assigned a `sslip.io` address and exposed. It may take a minute or two to populate.

== View Your Application

From the *Deployments* page, find the *Endpoints* column for your deployment and click on an endpoint. The endpoints available will depend on how you configured the port you added to your deployment. For endpoints where you do not see a randomly assigned port, append the path you specified when creating the ingress to the IP address. For example, if your endpoint looks like `xxx.xxx.xxx.xxx` or `+https://xxx.xxx.xxx.xxx+` change it to `xxx.xxx.xxx.xxx/hello` or `+https://xxx.xxx.xxx.xxx/hello+`.

Your application will open in a separate window.

=== Finished

Congratulations! You have successfully deployed a workload exposed via an ingress.

=== What's Next?

When you're done using your sandbox, destroy the Rancher Server and your cluster.
